@@ -1,3 +1,9 @@
+2023-08-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp--test-openbsd-p): New defun.
+	(tramp-test41-special-characters, tramp-test42-utf8): Use it.
+	(Bug#64935)
+
 2023-07-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp--test-instrument-test-case): Don't bind
@@ -3631,3 +3637,4 @@
 	* Makefile.in:
 	* README:
 	* tramp-tests.el: New files.
+)
